--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="anonymous" />
     <link rel="preconnect" href="https://my.gravatas.pro" />
     
+    <!-- Fonts - Added rounded serif for brand OB letters -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&family=Crimson+Text:wght@600;700&family=Merriweather:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
+    
     <title>Open Bed Oregon - Professional AFH Network</title>
   </head>
   <body>
